welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:13: error: not found: value b
	if ( 12 < a && b < 20)
                       ^countTeen:25: error: reassignment to val
		comp = comp +1 
                     ^